[package]
name = "kvs"
version = "0.1.0"
authors = ["Sean Riggin <sriggin@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0.98"
failure = "0.1.5"
bincode = "1.1.4"
byteorder = "1.3.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
